src/components/ProjectCard.css
@font-face {
  font-family: "InknutAntiqua-Light";
  src: local("InknutAntiqua-Light"),
    url("../assets/fonts/InknutAntiqua-Light.ttf") format("woff");
}
.card__container {
  position: relative;
  margin-right: 5%;
  margin-left: 5%;
  margin-bottom: 20px;
  z-index: 0;
}
.card__text__container {
  font-family: "InknutAntiqua-Light";
  text-align: left;
  width: 100%;
  color: #fe7b7b;
  line-height: 18px;
  margin-top: -34px;
  order: 1;
}
.card__text__container p {
  margin: 0;
  width: 100%;
  font-size: 13px;
}
/* .title__arrow__container {
  cursor: pointer;
}
.arrow__home {
  margin-right: 15px;
  min-width: 15px
} */
.card__text__container a {
  color: #fe7b7b;
  margin-top: 10px;
  font-size: 13px;
}
.card__title {
  /* padding-bottom: 10px; */
  font-weight: 600;
  font-size: 18px;
  letter-spacing: -0.5px;
}
/* SWIPER -------- */
.swiper-container {
  width: 100%;
  position: initial;
  display: flex;
  flex-direction: column;
}
.project__img {
  width: 100%;
}
.swiper-slide {
  display: flex;
  width: 100%;
  margin-right: 10px;
  justify-content: center;
  align-items: center;
}
.swiper-container-horizontal > .swiper-pagination-bullets {
  position: initial;
  width: auto;
  margin-top: 20px;
  margin-bottom: 20px;
  order: 1;
  width: fit-content;
  display: flex;
  align-self: flex-end;
  z-index: -1;
}
.swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
  margin: 0 3px;
}
.swiper-pagination-bullet {
  border-radius: 0;
  background-color: #fe7b7b;
  opacity: 1;
  width: 7px;
  height: 7px;
}
.swiper-pagination-bullet-active {
  background-color: #fefe00;
  box-shadow: 0 0 5px #fff, 0 0 20px rgba(254, 254, 0, 0),
    0 0 10px rgba(254, 254, 0, 0);
}

.swiper-wrapper {
  -webkit-tap-highlight-color:rgba(0,0,0,0);
}

